[25-07-17] IO